// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refs maintains refs from render to render 1`] = `
<button
  onClick={[Function]}
>
  !
</button>
`;

exports[`rendering prefers \`render\` over \`children\` 1`] = `
<div>
  !
</div>
`;

exports[`rendering renders with children render prop 1`] = `
<div>
  !
</div>
`;

exports[`rendering renders without figuritively exploding 1`] = `
<div>
  Heyyyooooo
</div>
`;

exports[`state updates state 1`] = `
<div
  lang="en"
  onMouseEnter={[Function]}
/>
`;
